--- a/about.html
+++ b/about.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/Logoicon.ico"
+      href="./images/logoIcon.ico"
       type="image/x-icon"
-    />
+    >
   </head>
   <body>
     <header>
       <img
-        src="./images/Logo Mighty ducks-01.png"
+        src="./images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
-      />
+      >
 
       <h1>Mighty Ducks Hockey League</h1>
 
@@ -31,10 +31,10 @@
 
     <main>
       <img
-        src="./images/hockey  2.jpg"
+        src="./images/hockey2.jpg"
         alt="Un jugador en cancha"
         width="200"
-      />
+      >
       <h2>Mision</h2>
       <p>
         To support young athletes living Chicago's northside neighborhood, who
