--- a/home.html
+++ b/home.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/Logoicon.ico"
+      href="./images/logoIcon.ico"
       type="image/x-icon"
-    />
+    >
   </head>
   <body>
     <header>
       <img
-        src="./images/Logo Mighty ducks-01.png"
+        src="./images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
-      />
+      >
 
       <h1>Mighty Ducks Hockey League</h1>
 
@@ -32,10 +32,10 @@
     <main>
       <section id="events">
         <img
-          src="./images/hockey  1.jpg"
+          src="./images/hockey1.jpg"
           alt="Un integrante del grupo de hockey"
           width="200"
-        />
+        >
         <h2>Upcoming Events</h2>
         <ul>
           <li>
