--- a/contact.html
+++ b/contact.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/Logoicon.ico"
+      href="./images/logoIcon.ico"
       type="image/x-icon"
-    />
+    >
   </head>
   <body>
     <header>
       <img
-        src="./images/Logo Mighty ducks-01.png"
+        src="./images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
-      />
+      >
 
       <h1>Mighty Ducks Hockey League</h1>
 
@@ -30,10 +30,10 @@
     </header>
     <main>
       <img
-        src="./images/hockey 3.jpg"
+        src="./images/hockey3.jpg"
         alt="Dos jugadores de MDHL en cancha+"
         width="200"
-      />
+      >
       <p>
         Please email us at
         <a
