--- a/about.html
+++ b/about.html
@@ -6,14 +6,14 @@
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/logoIcon.ico"
+      href="./assets/images/logoIcon.ico"
       type="image/x-icon"
     >
   </head>
   <body>
     <header>
       <img
-        src="./images/logoMightyDucks-01.png"
+        src="./assets/images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
       >
@@ -31,7 +31,7 @@
 
     <main>
       <img
-        src="./images/hockey2.jpg"
+        src="./assets/images/hockey2.jpg"
         alt="Un jugador en cancha"
         width="200"
       >
