--- a/home.html
+++ b/home.html
@@ -6,14 +6,14 @@
     <title>Home | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/logoIcon.ico"
+      href="./assets/images/logoIcon.ico"
       type="image/x-icon"
     >
   </head>
   <body>
     <header>
       <img
-        src="./images/logoMightyDucks-01.png"
+        src="./assets/images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
       >
@@ -32,7 +32,7 @@
     <main>
       <section id="events">
         <img
-          src="./images/hockey1.jpg"
+          src="./assets/images/hockey1.jpg"
           alt="Un integrante del grupo de hockey"
           width="200"
         >
