--- a/contact.html
+++ b/contact.html
@@ -6,14 +6,14 @@
     <title>Contact | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/logoIcon.ico"
+      href="./assets/images/logoIcon.ico"
       type="image/x-icon"
     >
   </head>
   <body>
     <header>
       <img
-        src="./images/logoMightyDucks-01.png"
+        src="./assets/images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
       >
@@ -30,7 +30,7 @@
     </header>
     <main>
       <img
-        src="./images/hockey3.jpg"
+        src="./assets/images/hockey3.jpg"
         alt="Dos jugadores de MDHL en cancha+"
         width="200"
       >
