--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -6,14 +6,14 @@
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/logoIcon.ico"
+      href="../images/logoIcon.ico"
       type="image/x-icon"
     >
   </head>
   <body>
     <header>
       <img
-        src="./images/logoMightyDucks-01.png"
+        src="../images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
       >
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="../../home.html">Home</a></li>
           <li><a href="#">About MDHL</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
@@ -31,7 +31,7 @@
 
     <main>
       <img
-        src="./images/hockey2.jpg"
+        src="../images/hockey2.jpg"
         alt="Un jugador en cancha"
         width="200"
       >
