--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -6,14 +6,14 @@
     <title>Contact | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
-      href="./images/logoIcon.ico"
+      href="../images/logoIcon.ico"
       type="image/x-icon"
     >
   </head>
   <body>
     <header>
       <img
-        src="./images/logoMightyDucks-01.png"
+        src="../images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
       >
@@ -22,7 +22,7 @@
 
       <nav>
         <ul>
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="../../home.html">Home</a></li>
           <li><a href="./about.html">About MDHL</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
@@ -30,7 +30,7 @@
     </header>
     <main>
       <img
-        src="./images/hockey3.jpg"
+        src="../images/hockey3.jpg"
         alt="Dos jugadores de MDHL en cancha+"
         width="200"
       >
