--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
       href="../images/logoIcon.ico"
       type="image/x-icon"
-    >
+    />
+    <!-- <link rel="stylesheet" href="../styles/style1.css" /> -->
+    <link rel="stylesheet" href="../styles/style2.css">
+
   </head>
   <body>
     <header>
@@ -16,55 +19,64 @@
         src="../images/logoMightyDucks-01.png"
         alt="Logo Mighty Ducks"
         width="200"
-      >
+        class="logoMightyDucks-01"
+      />
 
       <h1>Mighty Ducks Hockey League</h1>
 
-      <nav>
-        <ul>
-          <li><a href="../../home.html">Home</a></li>
-          <li><a href="#">About MDHL</a></li>
-          <li><a href="./contact.html">Contact</a></li>
-        </ul>
-      </nav>
+      <div id="banner-content">
+        <img
+          src="../images/design1_image2.jpg"
+          alt=""
+          id="banner"
+          width="200"
+        />
+      </div>
     </header>
 
-    <main>
-      <img
-        src="../images/hockey2.jpg"
-        alt="Un jugador en cancha"
-        width="200"
-      >
-      <h2>Mision</h2>
-      <p>
-        To support young athletes living Chicago's northside neighborhood, who
-        have an interest in learning and playing soccer, with opportunities to
-        learn and practice skills related to the game of hockey, specifically
-        those skills around team cooperation and good sportsmanship
-      </p>
+    <nav>
+      <ul>
+        <li class="home"><a href="../../index.html">Home</a></li>
+        <li class="about"><a href="#">About MDHL</a></li>
+        <li class="contact"><a href="./contact.html">Contact</a></li>
+      </ul>
+    </nav>
 
-      <h2>Vision</h2>
-      <p>
-        To support young athletes living Chicago's northside neighborhood, who
-        have an interest in learning and playing soccer, with opportunities to
-        learn and practice skills related to the game of hockey, specifically
-        those skills around team cooperation and good sportsmanship
-      </p>
+    <main class="about-main">
+      <h2>About MDHL</h2>
+      <dl>
+        <dt><h3>Mision</h3></dt>
+        <dd>
+          <p>
+            To support young athletes living Chicago's northside neighborhood,
+            who have an interest in learning and playing soccer, with
+            opportunities to learn and practice skills related to the game of
+            hockey, specifically those skills around team cooperation and good
+            sportsmanship
+          </p>
+        </dd>
 
-      <h2>General Information</h2>
-      <p>
-        The Mighty Ducks Soccer League was established in 1996 to provide
-        athletes residing Chicago's northside neighborhoods an environment in
-        which to learn and play hockey. To be a member of MDHL, you must be
-        between the ages of 4 - 12 and reside a Chicago northside neighborhood.
-        MDHL ran by o small full-time staff, and relies on the generous
-        volunteer time of parents and previous league members
-      </p>
+        <dt><h3>Vision</h3></dt>
+        <dd>
+          <p>
+            The Mighty Ducks Hockey League aspires to develop strong,
+            well-rounded and mindful athletes through the building of character,
+            self-discipline, and leadership.
+          </p>
+        </dd>
+
+        <dt><h3>General Information</h3></dt>
+        <dd>
+          <p>
+            The Mighty Ducks Soccer League was established in 1996 to provide
+            athletes residing Chicago's northside neighborhoods an environment
+            in which to learn and play hockey. To be a member of MDHL, you must
+            be between the ages of 4 - 12 and reside a Chicago northside
+            neighborhood. MDHL ran by o small full-time staff, and relies on the
+            generous volunteer time of parents and previous league members
+          </p>
+        </dd>
+      </dl>
     </main>
-
-    <footer>
-      &copy; Copyright 2023 |
-      <a href="#" target="_blank" rel="noopener noreferrer">MDHL</a>
-    </footer>
   </body>
 </html>
