--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
       href="../images/logoIcon.ico"
       type="image/x-icon"
-    />
-    <!-- <link rel="stylesheet" href="../styles/style1.css" /> -->
-    <link rel="stylesheet" href="../styles/style2.css">
-
+    >
+    <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
+    <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
+    <link rel="stylesheet" href="../styles/style3.css">
   </head>
   <body>
     <header>
@@ -20,63 +20,75 @@
         alt="Logo Mighty Ducks"
         width="200"
         class="logoMightyDucks-01"
-      />
+      >
 
       <h1>Mighty Ducks Hockey League</h1>
-
-      <div id="banner-content">
-        <img
-          src="../images/design1_image2.jpg"
-          alt=""
-          id="banner"
-          width="200"
-        />
-      </div>
     </header>
 
     <nav>
       <ul>
         <li class="home"><a href="../../index.html">Home</a></li>
-        <li class="about"><a href="#">About MDHL</a></li>
-        <li class="contact"><a href="./contact.html">Contact</a></li>
+        <li class="active">
+          <a href="#">About MDHL</a>
+        </li>
+        <li class="contact">
+          <a href="../pages/contact.html">Contact</a>
+        </li>
+        <li class="Rules"><a href="../pages/rules.html">Rules</a></li>
+        <li class="gameinfo">
+          <a href="../pages/gameinfo.html">Game Information</a>
+        </li>
       </ul>
     </nav>
+    <div class="container">
+      <aside class="gallery">
+        <h2 class="gallery-title">Gallery</h2>
+        <ul class="gallery-list">
+          <li>
+            <img src="../images/design1_image1.jpg" alt="Hockey image 1">
+          </li>
+          <li>
+            <img src="../images/design1_image2.jpg" alt="Hockey image 2">
+          </li>
+          <li><img src="../images/hockey3.jpg" alt="Hockey image 3"></li>
+        </ul>
+      </aside>
+      <main class="about-main">
+        <h2>About MDHL</h2>
+        <dl>
+          <dt><h3>Mision</h3></dt>
+          <dd>
+            <p>
+              To support young athletes living Chicago's northside neighborhood,
+              who have an interest in learning and playing soccer, with
+              opportunities to learn and practice skills related to the game of
+              hockey, specifically those skills around team cooperation and good
+              sportsmanship
+            </p>
+          </dd>
 
-    <main class="about-main">
-      <h2>About MDHL</h2>
-      <dl>
-        <dt><h3>Mision</h3></dt>
-        <dd>
-          <p>
-            To support young athletes living Chicago's northside neighborhood,
-            who have an interest in learning and playing soccer, with
-            opportunities to learn and practice skills related to the game of
-            hockey, specifically those skills around team cooperation and good
-            sportsmanship
-          </p>
-        </dd>
+          <dt><h3>Vision</h3></dt>
+          <dd>
+            <p>
+              The Mighty Ducks Hockey League aspires to develop strong,
+              well-rounded and mindful athletes through the building of
+              character, self-discipline, and leadership.
+            </p>
+          </dd>
 
-        <dt><h3>Vision</h3></dt>
-        <dd>
-          <p>
-            The Mighty Ducks Hockey League aspires to develop strong,
-            well-rounded and mindful athletes through the building of character,
-            self-discipline, and leadership.
-          </p>
-        </dd>
-
-        <dt><h3>General Information</h3></dt>
-        <dd>
-          <p>
-            The Mighty Ducks Soccer League was established in 1996 to provide
-            athletes residing Chicago's northside neighborhoods an environment
-            in which to learn and play hockey. To be a member of MDHL, you must
-            be between the ages of 4 - 12 and reside a Chicago northside
-            neighborhood. MDHL ran by o small full-time staff, and relies on the
-            generous volunteer time of parents and previous league members
-          </p>
-        </dd>
-      </dl>
-    </main>
+          <dt><h3>General Information</h3></dt>
+          <dd>
+            <p>
+              The Mighty Ducks Soccer League was established in 1996 to provide
+              athletes residing Chicago's northside neighborhoods an environment
+              in which to learn and play hockey. To be a member of MDHL, you
+              must be between the ages of 4 - 12 and reside a Chicago northside
+              neighborhood. MDHL ran by o small full-time staff, and relies on
+              the generous volunteer time of parents and previous league members
+            </p>
+          </dd>
+        </dl>
+      </main>
+    </div>
   </body>
 </html>
