--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
         <li class="contact">
           <a href="./assets/pages/contact.html">Contact</a>
         </li>
-        <li class="Rules"><a href="./assets/pages/rules.html">Rules</a></li>
+        <li class="rules"><a href="./assets/pages/rules.html">Rules</a></li>
         <li class="gameinfo">
           <a href="./assets/pages/gameinfo.html">Game Information</a>
         </li>
+        <li class="register"><a href="./assets/pages/register.html">Register</a></li>
       </ul>
     </nav>
     <div class="container">
