--- a/assets/pages/about.html
+++ b/assets/pages/about.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
       href="../images/logoIcon.ico"
       type="image/x-icon"
-    >
+    />
     <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
     <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
-    <link rel="stylesheet" href="../styles/style3.css">
+    <link rel="stylesheet" href="../styles/style3.css" />
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
         alt="Logo Mighty Ducks"
         width="200"
         class="logoMightyDucks-01"
-      >
+      />
 
       <h1>Mighty Ducks Hockey League</h1>
     </header>
@@ -34,10 +34,11 @@
         <li class="contact">
           <a href="../pages/contact.html">Contact</a>
         </li>
-        <li class="Rules"><a href="../pages/rules.html">Rules</a></li>
+        <li class="rules"><a href="../pages/rules.html">Rules</a></li>
         <li class="gameinfo">
           <a href="../pages/gameinfo.html">Game Information</a>
         </li>
+        <li class="register"><a href="../pages/register.html">Register</a></li>
       </ul>
     </nav>
     <div class="container">
@@ -45,12 +46,12 @@
         <h2 class="gallery-title">Gallery</h2>
         <ul class="gallery-list">
           <li>
-            <img src="../images/design1_image1.jpg" alt="Hockey image 1">
+            <img src="../images/design1_image1.jpg" alt="Hockey image 1" />
           </li>
           <li>
-            <img src="../images/design1_image2.jpg" alt="Hockey image 2">
+            <img src="../images/design1_image2.jpg" alt="Hockey image 2" />
           </li>
-          <li><img src="../images/hockey3.jpg" alt="Hockey image 3"></li>
+          <li><img src="../images/hockey3.jpg" alt="Hockey image 3" /></li>
         </ul>
       </aside>
       <main class="about-main">
