--- a/assets/pages/gameinfo.html
+++ b/assets/pages/gameinfo.html
@@ -44,7 +44,7 @@
       </ul>
     </nav>
 
-    <div class="container">
+    <div class="container contgameinfo">
       <aside class="places">
         <h2 class="places-title">Places</h2>
         <div class="places-columns">
