--- a/assets/pages/contact.html
+++ b/assets/pages/contact.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Mighty Ducks Hockey League</title>
     <link
       rel="shortcut icon"
       href="../images/logoIcon.ico"
       type="image/x-icon"
-    />
+    >
     <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
     <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
-    <link rel="stylesheet" href="../styles/style3.css" />
+    <link rel="stylesheet" href="../styles/style3.css">
   </head>
   <body>
     <header>
@@ -20,7 +20,7 @@
         alt="Logo Mighty Ducks"
         width="200"
         class="logoMightyDucks-01"
-      />
+      >
 
       <h1>Mighty Ducks Hockey League</h1>
     </header>
@@ -46,12 +46,12 @@
         <h2 class="gallery-title">Gallery</h2>
         <ul class="gallery-list">
           <li>
-            <img src="../images/design1_image1.jpg" alt="Hockey image 1" />
+            <img src="../images/design1_image1.jpg" alt="Hockey image 1">
           </li>
           <li>
-            <img src="../images/design1_image2.jpg" alt="Hockey image 2" />
+            <img src="../images/design1_image2.jpg" alt="Hockey image 2">
           </li>
-          <li><img src="../images/hockey3.jpg" alt="Hockey image 3" /></li>
+          <li><img src="../images/hockey3.jpg" alt="Hockey image 3"></li>
         </ul>
       </aside>
       <main class="contact-main">
