--- a/assets/pages/gameinfo.html
+++ b/assets/pages/gameinfo.html
@@ -1,215 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Game Information | Mighty Ducks Hockey League</title>
-    <link
-      rel="shortcut icon"
-      href="../images/logoIcon.ico"
-      type="image/x-icon"
-    />
-    <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
-    <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
-    <link rel="stylesheet" href="../styles/style3.css" />
-  </head>
-  <body>
-    <header>
-      <img
-        src="../images/logoMightyDucks-01.png"
-        alt="Logo Mighty Ducks"
-        width="200"
-        class="logoMightyDucks-01"
-      />
 
-      <h1>Mighty Ducks Hockey League</h1>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Game Information | Mighty Ducks Hockey League</title>
+  <link rel="shortcut icon" href="../images/logoIcon.ico" type="image/x-icon">
+  <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
+  <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
+  <link rel="stylesheet" href="../styles/style3.css">
+</head>
 
-    <nav>
-      <ul>
-        <li class="home"><a href="../../index.html">Home</a></li>
-        <li class="about">
-          <a href="../pages/about.html">About MDHL</a>
-        </li>
-        <li class="contact">
-          <a href="../pages/contact.html">Contact</a>
-        </li>
-        <li class="rules">
-          <a href="../pages/rules.html">Rules</a>
-        </li>
-        <li class="active">
-          <a href="#">Game Information</a>
-        </li>
-        <li class="register"><a href="../pages/register.html">Register</a></li>
-      </ul>
-    </nav>
+<body>
+  <header>
+    <img src="../images/logoMightyDucks-01.png" alt="Logo Mighty Ducks" width="200" class="logoMightyDucks-01">
 
-    <div class="container contgameinfo">
-      <aside class="places">
-        <h2 class="places-title">Places</h2>
-        <div class="places-columns">
-          <ul class="places-list">
-            <li>
-              <p>AJ Katzenmaier</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11878.62611526556!2d-87.64752325445491!3d41.900243294137354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1691793740362!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-            <li>
-              <p>Greenbay</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022796363512!2d-87.64040842355207!3d41.91386866317346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1691793974409!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-            <li>
-              <p>Howard A. Yeager</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698770484867!2d-87.85645602353598!3d42.315442237918646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1691794031248!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-          </ul>
-          <ul class="places-list">
-            <li>
-              <p>Marjorie P. Hart</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896540150095!2d-87.64854762355147!3d41.92962686218599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1691794114320!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-            <li>
-              <p>North</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.7596649076454!2d-87.83701992353387!3d42.36896093453867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691794348567!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-            <li>
-              <p>South</p>
-              <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1477.194033969331!2d-88.34298320790164!3d42.227521653119666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f6d4a6d2e1093%3A0xdea3c745e6bb6aa0!2sSouth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691794237384!5m2!1ses-419!2sar"
-                width="100%"
-                style="border: 0"
-                allowfullscreen=""
-                loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"
-              ></iframe>
-            </li>
-          </ul>
+    <h1>Mighty Ducks Hockey League</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li class="home"><a href="../../index.html">Home</a></li>
+      <li class="about">
+        <a href="../pages/about.html">About MDHL</a>
+      </li>
+      <li class="contact">
+        <a href="../pages/contact.html">Contact</a>
+      </li>
+      <li class="rules">
+        <a href="../pages/rules.html">Rules</a>
+      </li>
+      <li class="active">
+        <a href="#">Game Information</a>
+      </li>
+      <li class="register"><a href="../pages/register.html">Register</a></li>
+    </ul>
+  </nav>
+
+  <div class="container contgameinfo">
+    <aside class="places">
+      <h2 class="places-title">Places</h2>
+      <div class="places-columns">
+        <ul class="places-list">
+          <li>
+            <p>AJ Katzenmaier</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11878.62611526556!2d-87.64752325445491!3d41.900243294137354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ%20Katzenmaier%20Elementary!5e0!3m2!1ses-419!2sar!4v1691793740362!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+          <li>
+            <p>Greenbay</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.022796363512!2d-87.64040842355207!3d41.91386866317346!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay%20Elementary!5e0!3m2!1ses-419!2sar!4v1691793974409!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+          <li>
+            <p>Howard A. Yeager</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2950.2698770484867!2d-87.85645602353598!3d42.315442237918646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880feccac26b07c5%3A0x8b51fa5d6efe771a!2sHoward%20A.%20Yeager%20School%20(PREK-K)!5e0!3m2!1ses-419!2sar!4v1691794031248!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+        </ul>
+        <ul class="places-list">
+          <li>
+            <p>Marjorie P. Hart</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.2896540150095!2d-87.64854762355147!3d41.92962686218599!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie%20P%20Hart%20Elementary!5e0!3m2!1ses-419!2sar!4v1691794114320!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+          <li>
+            <p>North</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2947.7596649076454!2d-87.83701992353387!3d42.36896093453867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fed60b13aa0a7%3A0xfe6df83b0f197ed6!2sNorth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691794348567!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+          <li>
+            <p>South</p>
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1477.194033969331!2d-88.34298320790164!3d42.227521653119666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880f6d4a6d2e1093%3A0xdea3c745e6bb6aa0!2sSouth%20Elementary%20School!5e0!3m2!1ses-419!2sar!4v1691794237384!5m2!1ses-419!2sar"
+              style="border: 0" allowfullscreen="" loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </li>
+        </ul>
+      </div>
+    </aside>
+    <main class="gameinfo-main">
+      <section class="table">
+        <h2>Fall Schedule</h2>
+        <table>
+          <caption>
+            * All games take place on Saturday
+          </caption>
+          <thead>
+            <tr>
+              <th>SEPTEMBER</th>
+              <th>Teams</th>
+              <th>Location</th>
+              <th>Times</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td rowspan="2">9/01</td>
+              <td>U1 & U4</td>
+              <td>AJ Katzenmaier</td>
+              <td>9:30 a.m.</td>
+            </tr>
+            <tr>
+              <td>U3 & U2</td>
+              <td>Greenbay</td>
+              <td>1:00 p.m.</td>
+            </tr>
+            <tr>
+              <td rowspan="2">9/08</td>
+              <td>U5 & U6</td>
+              <td>Howard A Yeager</td>
+              <td>9:30 a.m.</td>
+            </tr>
+            <tr>
+              <td>U6 & U1</td>
+              <td>Marjorie P Hart</td>
+              <td>1:00 p.m.</td>
+            </tr>
+            <tr>
+              <td rowspan="2">9/15</td>
+              <td>U2 & U4</td>
+              <td>North</td>
+              <td>9:30 a.m.</td>
+            </tr>
+            <tr>
+              <td>U3 & U5</td>
+              <td>AJ Katzenmaier</td>
+              <td>1:00 p.m.</td>
+            </tr>
+            <tr>
+              <td rowspan="2">9/22</td>
+              <td>U1 & U3</td>
+              <td>South</td>
+              <td>9:30 a.m.</td>
+            </tr>
+            <tr>
+              <td>U2 & U6</td>
+              <td>Howard A Yeager</td>
+              <td>1:00 p.m.</td>
+            </tr>
+            <tr>
+              <td>9/29</td>
+              <td>U4 & U5</td>
+              <td>Greenbay</td>
+              <td>9:30 a.m.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <section class="addinfo">
+        <h3>Facility type:</h3>
+        <p>Outdoor</p>
+        <h3>Additional Information:</h3>
+        <p>
+          If deemed necessary by MDHL games may be shortenedor cancelled due
+          to extreme weather conditions.
+        </p>
+        <h3>Please direct all questions to:</h3>
+        <p>Michael Randall, League Coordinator.</p>
+        <div class="gameinfo-contact">
+          <h3>Phone: <a href="tel:+6306908132">(630) 690-8132</a></h3>
+          <h3>
+            Email:
+            <a href="mailto:michael.randall@chihockey.org">michaelrandall@chihockey.org</a>
+          </h3>
         </div>
-      </aside>
-      <main class="gameinfo-main">
-        <section class="table">
-          <h2>Fall Schedule</h2>
-          <table>
-            <caption>
-              * All games take place on Saturday
-            </caption>
-            <thead>
-              <tr>
-                <th>SEPTEMBER</th>
-                <th>Teams</th>
-                <th>Location</th>
-                <th>Times</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td rowspan="2">9/01</td>
-                <td>U1 & U4</td>
-                <td>AJ Katzenmaier</td>
-                <td>9:30 a.m.</td>
-              </tr>
-              <tr>
-                <td>U3 & U2</td>
-                <td>Greenbay</td>
-                <td>1:00 p.m.</td>
-              </tr>
-              <tr>
-                <td rowspan="2">9/08</td>
-                <td>U5 & U6</td>
-                <td>Howard A Yeager</td>
-                <td>9:30 a.m.</td>
-              </tr>
-              <tr>
-                <td>U6 & U1</td>
-                <td>Marjorie P Hart</td>
-                <td>1:00 p.m.</td>
-              </tr>
-              <tr>
-                <td rowspan="2">9/15</td>
-                <td>U2 & U4</td>
-                <td>North</td>
-                <td>9:30 a.m.</td>
-              </tr>
-              <tr>
-                <td>U3 & U5</td>
-                <td>AJ Katzenmaier</td>
-                <td>1:00 p.m.</td>
-              </tr>
-              <tr>
-                <td rowspan="2">9/22</td>
-                <td>U1 & U3</td>
-                <td>South</td>
-                <td>9:30 a.m.</td>
-              </tr>
-              <tr>
-                <td>U2 & U6</td>
-                <td>Howard A Yeager</td>
-                <td>1:00 p.m.</td>
-              </tr>
-              <tr>
-                <td>9/29</td>
-                <td>U4 & U5</td>
-                <td>Greenbay</td>
-                <td>9:30 a.m.</td>
-              </tr>
-            </tbody>
-          </table>
-        </section>
-        <section class="addinfo">
-          <h3>Facility type:</h3>
-          <p>Outdoor</p>
-          <h3>Additional Information:</h3>
-          <p>
-            If deemed necessary by MDHL games may be shortenedor cancelled due
-            to extreme weather conditions.
-          </p>
-          <h3>Please direct all questions to:</h3>
-          <p>Michael Randall, League Coordinator.</p>
-          <div class="gameinfo-contact">
-            <h3>Phone: <a href="tel:+6306908132">(630) 690-8132</a></h3>
-            <h3>
-              Email:
-              <a href="mailto:michael.randall@chihockey.org"
-                >michaelrandall@chihockey.org</a
-              >
-            </h3>
-          </div>
-        </section>
-      </main>
-    </div>
-  </body>
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
