--- a/assets/pages/register.html
+++ b/assets/pages/register.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register | Mighty Ducks Hockey League</title>
-    <link rel="shortcut icon" href="../images/logoIcon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../images/logoIcon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
     <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
-    <link rel="stylesheet" href="../styles/style3.css" />
+    <link rel="stylesheet" href="../styles/style3.css">
 </head>
 
 <body>
     <header>
-        <img src="../images/logoMightyDucks-01.png" alt="Logo Mighty Ducks" width="200" class="logoMightyDucks-01" />
+        <img src="../images/logoMightyDucks-01.png" alt="Logo Mighty Ducks" width="200" class="logoMightyDucks-01">
 
         <h1>Mighty Ducks Hockey League</h1>
     </header>
@@ -39,21 +39,21 @@
             <h2 class="gallery-title">Gallery</h2>
             <ul class="gallery-list">
                 <li>
-                    <img src="../images/design1_image1.jpg" alt="Hockey image 1" />
+                    <img src="../images/design1_image1.jpg" alt="Hockey image 1">
                 </li>
                 <li>
-                    <img src="../images/design1_image2.jpg" alt="Hockey image 2" />
+                    <img src="../images/design1_image2.jpg" alt="Hockey image 2">
                 </li>
-                <li><img src="../images/hockey3.jpg" alt="Hockey image 3" /></li>
+                <li><img src="../images/hockey3.jpg" alt="Hockey image 3"></li>
             </ul>
         </aside>
         <main class="contact-main">
             <h2>Registration Form</h2>
             <form action="./show_data.html" method="get" class="form">
                 <fieldset class="info">
-                    <label for="name">Player's First Name:</label>
+                    <label for="f-name">Player's First Name:</label>
                     <input type="text" autocomplete="name" name="name" id="f-name" value="">
-                    <label for="lastname">Last name:</label>
+                    <label for="l-name">Last name:</label>
                     <input type="text" autocomplete="family-name" name="lastname" id="l-name" value="">
                     <label for="city">City:</label>
                     <input type="text" name="city" id="city">
@@ -65,95 +65,95 @@
                             min="2000-01-01">
                     </div>
 
-                    <div class="gender">
-                        <label for="gender">Gender:</label>
-                        <input type="radio" name="gender" id="gender female" value="female">
+                    <div class="male">
+                        <label for="male">Gender:</label>
+                        <input type="radio" name="gender" id="female" value="female">
                         <label for="female">Female</label>
-                        <input type="radio" name="gender" id="gender male" value="male">
+                        <input type="radio" name="gender" id="male" value="male">
                         <label for="male">Male</label>
                     </div>
                     <div class="grade">
                         <label for="grade">Grade:</label>
-                        <input type="radio" name="grade" id="grade pre-school" value="pre-school">
-                        <label for="pre-school">Pre-school</label>
+                        <input type="radio" name="pre-school" id="grade" value="pre-school">
+                        <label for="grade">Pre-school</label>
 
-                        <input type="radio" name="grade" id="grade first" value="first-school">
+                        <input type="radio" name="first-school" id="first" value="first-school">
                         <label for="first">1st</label>
 
-                        <input type="radio" name="grade" id="grade second" value="second-grade">
+                        <input type="radio" name="second-grade" id="second" value="second-grade">
                         <label for="second">2nd</label>
 
-                        <input type="radio" name="grade" id="grade third" value="third-grade">
+                        <input type="radio" name="third-grade" id="third" value="third-grade">
                         <label for="third">3rd</label>
 
-                        <input type="radio" name="grade" id="grade fourth" value="fourth-grade">
+                        <input type="radio" name="fourth-grade" id="fourth" value="fourth-grade">
                         <label for="fourth">4th</label>
 
-                        <input type="radio" name="grade" id="grade fifth" value="fifth-grade">
+                        <input type="radio" name="fifth-grade" id="fifth" value="fifth-grade">
                         <label for="fifth">5th</label>
                     </div>
                 </fieldset>
                 <fieldset class="elementary">
                     <legend>Wich elementary school do you live near?</legend>
-                    <label for="closestschool">Closest School:</label>
+                    <label for="ajkatzenmaier">Closest School:</label>
                     <div class="school-1">
-                        <input type="radio" name="closestschool" id="closestschool aj" value="aj">
-                        <label for="aj">AJ Katzenmaier</label>
+                        <input type="radio" name="closestschool" id="ajkatzenmaier" value="ajkatzenmaier">
+                        <label for="ajkatzenmaier">AJ Katzenmaier</label>
 
-                        <input type="radio" name="closestschool" id="closestschool gb" value="greenbay">
-                        <label for="gb">Greenbay</label>
+                        <input type="radio" name="closestschool" id="greenbay" value="greenbay">
+                        <label for="greenbay">Greenbay</label>
 
-                        <input type="radio" name="closestschool" id="closestschool hay" value="ayeager">
-                        <label for="aj">Howard A Yeager</label>
+                        <input type="radio" name="closestschool" id="howardayeager" value="howardayeager">
+                        <label for="howardayeager">Howard A Yeager</label>
 
                     </div>
                     <div class="school-2">
-                        <input type="radio" name="closestschool" id="closestschool ph" value="phart">
-                        <label for="ph">Marjorie P Hart</label>
+                        <input type="radio" name="closestschool" id="marjoriephart" value="marjoriephart">
+                        <label for="marjoriephart">Marjorie P Hart</label>
 
-                        <input type="radio" name="closestschool" id="closestschool ne" value="northelementary">
-                        <label for="ne">North elementary</label>
+                        <input type="radio" name="closestschool" id="northelementary" value="northelementary">
+                        <label for="northelementary">North elementary</label>
 
-                        <input type="radio" name="closestschool" id="closestschool sh" value="southelementary">
-                        <label for="aj">South Elementary</label>
+                        <input type="radio" name="closestschool" id="southelementary" value="southelementary">
+                        <label for="southelementary">South Elementary</label>
                     </div>
                 </fieldset>
                 <fieldset class="position">
                     <legend>What position(s) do you normally play? (check all that apply)</legend>
 
-                    <input type="checkbox" name="forward" id="forward" value="forward">
+                    <input type="checkbox" name="positions" id="forward" value="forward">
                     <label for="forward">Forward</label>
-                    <input type="checkbox" name="midfield" id="midfield" value="midfield">
+                    <input type="checkbox" name="positions" id="midfield" value="midfield">
                     <label for="midfield">Midfield</label>
-                    <input type="checkbox" name="defense" id="defense" value="defense">
+                    <input type="checkbox" name="positions" id="defense" value="defense">
                     <label for="defense">Defense</label>
-                    <input type="checkbox" name="goalkeeper" id="goalkeeper" value="goalkeeper">
+                    <input type="checkbox" name="positions" id="goalkeeper" value="goalkeeper">
                     <label for="goalkeeper">Goalkeeper</label>
 
                 </fieldset>
                 <fieldset class="size">
                     <legend>Uniform Size</legend>
 
-                    <input type="radio" name="uniformsize" id="uniformsize ys" value="ys">
-                    <label for="ys">Youth Small</label>
+                    <input type="radio" name="uniformsize" id="youthsmall" value="ys">
+                    <label for="youthsmall">Youth Small</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize ym" value="ym">
-                    <label for="ym">Youth Medium</label>
+                    <input type="radio" name="uniformsize" id="youthmedium" value="ym">
+                    <label for="youthmedium">Youth Medium</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize yl" value="yl">
-                    <label for="yl">Youth Large</label>
+                    <input type="radio" name="uniformsize" id="youthlarge" value="yl">
+                    <label for="youthlarge">Youth Large</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize sm" value="sm">
-                    <label for="sm">Small</label>
+                    <input type="radio" name="uniformsize" id="small" value="sm">
+                    <label for="small">Small</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize m" value="m">
-                    <label for="m">Medium</label>
+                    <input type="radio" name="uniformsize" id="medium" value="m">
+                    <label for="medium">Medium</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize l" value="l">
-                    <label for="aj">Large</label>
+                    <input type="radio" name="uniformsize" id="large" value="l">
+                    <label for="large">Large</label>
 
-                    <input type="radio" name="uniformsize" id="uniformsize xl" value="xl">
-                    <label for="xl">Extra-Large</label>
+                    <input type="radio" name="uniformsize" id="extralarge" value="xl">
+                    <label for="extralarge">Extra-Large</label>
                 </fieldset>
                 <fieldset class="ptp">
                     <legend>Permissions to Play</legend>
@@ -169,8 +169,8 @@
                         below, I also acknowledge that I have read the cancellation policy and agree to its
                         terms.</label>
                     <label for="signature">Parent/Guardian Signature:</label>
-                    <input type="text" name="signature" id="ptp signature">
-                    <label for="date">Date:</label>
+                    <input type="text" name="signature" id="signature">
+                    <label for="ptp">Date:</label>
                     <input type="date" name="date" id="ptp" max="2050-12-31" min="2000-01-01">
 
 
