--- a/assets/pages/rules.html
+++ b/assets/pages/rules.html
@@ -1,155 +1,152 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rules | Mighty Ducks Hockey League</title>
-    <link
-      rel="shortcut icon"
-      href="../images/logoIcon.ico"
-      type="image/x-icon"
-    />
-    <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
-    <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
-    <link rel="stylesheet" href="../styles/style3.css" />
-  </head>
-  <body>
-    <header>
-      <img
-        src="../images/logoMightyDucks-01.png"
-        alt="Logo Mighty Ducks"
-        width="200"
-        class="logoMightyDucks-01"
-      />
 
-      <h1>Mighty Ducks Hockey League</h1>
-    </header>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Rules | Mighty Ducks Hockey League</title>
+  <link rel="shortcut icon" href="../images/logoIcon.ico" type="image/x-icon">
+  <!-- <link rel="stylesheet" href="../styles/style1.css"> -->
+  <!-- <link rel="stylesheet" href="../styles/style2.css"> -->
+  <link rel="stylesheet" href="../styles/style3.css">
+</head>
 
-    <nav>
-      <ul>
-        <li class="home"><a href="../../index.html">Home</a></li>
-        <li class="about">
-          <a href="../pages/about.html">About MDHL</a>
+<body>
+  <header>
+    <img src="../images/logoMightyDucks-01.png" alt="Logo Mighty Ducks" width="200" class="logoMightyDucks-01">
+
+    <h1>Mighty Ducks Hockey League</h1>
+  </header>
+
+  <nav>
+    <ul>
+      <li class="home"><a href="../../index.html">Home</a></li>
+      <li class="about">
+        <a href="../pages/about.html">About MDHL</a>
+      </li>
+      <li class="contact">
+        <a href="../pages/contact.html">Contact</a>
+      </li>
+      <li class="active"><a href="#">Rules</a></li>
+      <li class="gameinfo">
+        <a href="../pages/gameinfo.html">Game Information</a>
+      </li>
+      <li class="register"><a href="../pages/register.html">Register</a></li>
+    </ul>
+  </nav>
+
+  <div class="container">
+    <aside class="gallery">
+      <h2 class="gallery-title">Gallery</h2>
+      <ul class="gallery-list">
+        <li>
+          <img src="../images/design1_image1.jpg" alt="Hockey image 1">
         </li>
-        <li class="contact">
-          <a href="../pages/contact.html">Contact</a>
+        <li>
+          <img src="../images/design1_image2.jpg" alt="Hockey image 2">
         </li>
-        <li class="active"><a href="#">Rules</a></li>
-        <li class="gameinfo">
-          <a href="../pages/gameinfo.html">Game Information</a>
-        </li>
-        <li class="register"><a href="../pages/register.html">Register</a></li>
+        <li><img src="../images/hockey3.jpg" alt="Hockey image 3"></li>
       </ul>
-    </nav>
+    </aside>
 
-    <div class="container">
-      <aside class="gallery">
-        <h2 class="gallery-title">Gallery</h2>
-        <ul class="gallery-list">
-          <li>
-            <img src="../images/design1_image1.jpg" alt="Hockey image 1" />
-          </li>
-          <li>
-            <img src="../images/design1_image2.jpg" alt="Hockey image 2" />
-          </li>
-          <li><img src="../images/hockey3.jpg" alt="Hockey image 3" /></li>
-        </ul>
-      </aside>
+    <main class="rules-main">
 
-      <main class="rules-main">
+      <section class="sportsmanship">
         <h2 id="rules">RULES OF PLAY & POLICIES</h2>
         <p id="rules-p">
           IHF rules shall govern MDHL play except as modified herein.
         </p>
-        <section class="sportsmanship">
-          <!-- DL Sportsmanshipdl -->
-          <dl class="sportsmanshipdl list">
-            <dt><h3>SPORTSMANSHIP</h3></dt>
-            <dd>
-              The common interest that members of the Association share is to
-              inspire youth to practice the ideals of sportsmanship and fair
-              play. Any player, coach, team, parent, spectator, administrator or
-              referee whose behavior detracts from this purpose is subject to
-              disciplinary action regardless of technical hockey background,
-              expertise, accomplishments or standing.
-            </dd>
-          </dl>
-        </section>
+        <!-- DL Sportsmanshipdl -->
+        <dl class="sportsmanshipdl list">
+          <dt>
+            <p class="title"></p>
+          </dt>
+          <dd>
+            The common interest that members of the Association share is to
+            inspire youth to practice the ideals of sportsmanship and fair
+            play. Any player, coach, team, parent, spectator, administrator or
+            referee whose behavior detracts from this purpose is subject to
+            disciplinary action regardless of technical hockey background,
+            expertise, accomplishments or standing.
+          </dd>
+        </dl>
+      </section>
 
-        <section class="ihf">
-          <h2>IHF FIELD REGULATIONS</h2>
+      <section class="ihf">
+        <h2>IHF FIELD REGULATIONS</h2>
 
-          <!-- OL Dimension & Competition -->
-          <ol class="dimencompe list">
-            <li class="dimension">
-              <h3>DIMENSION.</h3>
-              <p>
-                IHF Law 1 provides for flexible external field dimensions within
-                a given maximum and minimum width and length. These dimensions
-                should be adhered to for all fields used by teams under 12 and
-                older.
-              </p>
-            </li>
-            <li class="compefi">
-              <h3>COMPETITION FIELDS</h3>
-              <p>
-                Fields used within the competition program must be a minimum of
-                100 x 60 yards.Leagues, districts or associations participating
-                in the state competition program that are unable to provide a
-                field that meets these minimum requirements must advise the
-                State Competition Board which will assign its Fields Committee
-                to inspect the field and recommend to the Board whether or not a
-                waiver of the minimum dimensions should be granted. Teams from
-                leagues, districts or associations that are unable to provide an
-                acceptable field may be required to play all their games away.
-              </p>
-            </li>
-            <li class="fiage">
-              <h3>FIELDS USED BY YOUNG AGE GROUPS</h3>
+        <!-- OL Dimension & Competition -->
+        <ol class="dimencompe list">
+          <li class="dimension">
+            <h3>DIMENSION.</h3>
+            <p>
+              IHF Law 1 provides for flexible external field dimensions within
+              a given maximum and minimum width and length. These dimensions
+              should be adhered to for all fields used by teams under 12 and
+              older.
+            </p>
+          </li>
+          <li class="compefi">
+            <h3>COMPETITION FIELDS</h3>
+            <p>
+              Fields used within the competition program must be a minimum of
+              100 x 60 yards.Leagues, districts or associations participating
+              in the state competition program that are unable to provide a
+              field that meets these minimum requirements must advise the
+              State Competition Board which will assign its Fields Committee
+              to inspect the field and recommend to the Board whether or not a
+              waiver of the minimum dimensions should be granted. Teams from
+              leagues, districts or associations that are unable to provide an
+              acceptable field may be required to play all their games away.
+            </p>
+          </li>
+          <li class="fiage">
+            <h3>FIELDS USED BY YOUNG AGE GROUPS</h3>
 
-              <!-- OL Field  -->
+            <!-- OL Field  -->
 
-              <ol class="field list">
-                <li>
-                  U-6 play on a field approximately 20 X 40 yards with no
-                  penalty areas. Fields for older age groups should be
-                  progressively larger.
-                </li>
-                <li>
-                  U-8 plays on a field 40-50 yards in length and 20-30 yards
-                  width.
-                </li>
-                <li>
-                  U-10 play on a field 70-80 yards in length and 40-50 yards in
-                  width.
-                </li>
-                <li>
-                  In addition, fields used by young age groups may have their
-                  internal dimensions and size of goal similarly modified.
-                </li>
-              </ol>
-            </li>
-          </ol>
-        </section>
+            <ol class="field list">
+              <li>
+                U-6 play on a field approximately 20 X 40 yards with no
+                penalty areas. Fields for older age groups should be
+                progressively larger.
+              </li>
+              <li>
+                U-8 plays on a field 40-50 yards in length and 20-30 yards
+                width.
+              </li>
+              <li>
+                U-10 play on a field 70-80 yards in length and 40-50 yards in
+                width.
+              </li>
+              <li>
+                In addition, fields used by young age groups may have their
+                internal dimensions and size of goal similarly modified.
+              </li>
+            </ol>
+          </li>
+        </ol>
+      </section>
 
-        <section class="allplay">
-          <h2>ALL-PLAY</h2>
-          <p>
-            All-play means that every recreation player on every team shall play
-            atleast fifty percent of each game. Coaches in the competition
-            program are encouraged to play their players 50% of each game.
-          </p>
-          <!-- UL allplay -->
-          <ul class="allplayul list">
-            <li class="allplayli">
-              A Coach shall be permitted to not play a player 50% of each game
-              under special circumstances, e.g., unexcused absences from
-              practice and/or games, ungentlemanly conduct at practice and/or
-              games, and injuries.
-            </li>
-          </ul>
-        </section>
-      </main>
-    </div>
-  </body>
+      <section class="allplay">
+        <h2>ALL-PLAY</h2>
+        <p>
+          All-play means that every recreation player on every team shall play
+          atleast fifty percent of each game. Coaches in the competition
+          program are encouraged to play their players 50% of each game.
+        </p>
+        <!-- UL allplay -->
+        <ul class="allplayul list">
+          <li class="allplayli">
+            A Coach shall be permitted to not play a player 50% of each game
+            under special circumstances, e.g., unexcused absences from
+            practice and/or games, ungentlemanly conduct at practice and/or
+            games, and injuries.
+          </li>
+        </ul>
+      </section>
+    </main>
+  </div>
+</body>
+
 </html>
